--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
-<!--
-  Original Design: Spectral by HTML5 UP
-    html5up.net | @n33co
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-  Jekyll build mod
--->
 <html>
+    
+    {% include /head.html %}
 
-  {% include head.html %}
+	<body id="top">
 
-  <body>
+        {% include /header.html %}
 
-    <!-- Page Wrapper -->
-    <div id="page-wrapper">
+        {{ content }}
 
-      {% include header.html %}
+        {% include /footer.html %}
 
-      {{ content }}
-
-      {% include footer.html %}
-
-      {% include scripts.html %}
-
-    </div>
-
-  </body>
+    </body>
 
 </html>
